--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,7 @@
     {% include header.html %}
 
     <!-- Banner -->
+    <!-- The banner picture is selected in the _sass/layout/_banner.scss file -->
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
